[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu_minigame.gd" type="Script" id=1]
[ext_resource path="res://ASSERTS/inside/pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ASSERTS/inside/scence_minigame.png" type="Texture" id=3]
[ext_resource path="res://ASSERTS/inside/confirmation_001.ogg" type="AudioStream" id=4]
[ext_resource path="res://ASSERTS/inside/icielBrandonText-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 44
outline_color = Color( 0.882353, 0.360784, 0.360784, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 17
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 1 )

[node name="ScenceMinigame" type="Sprite" parent="."]
position = Vector2( 527.445, 299.25 )
scale = Vector2( 0.555093, 0.555093 )
texture = ExtResource( 3 )

[node name="Dodge" type="Button" parent="."]
margin_left = 370.0
margin_top = 203.0
margin_right = 648.0
margin_bottom = 387.0
custom_colors/font_color = Color( 0.882353, 0.360784, 0.360784, 1 )
custom_fonts/font = SubResource( 2 )
text = "Dodge"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flappy_bird" type="Button" parent="."]
margin_left = 675.0
margin_top = 203.0
margin_right = 952.0
margin_bottom = 387.0
custom_colors/font_color = Color( 0.882353, 0.360784, 0.360784, 1 )
custom_fonts/font = SubResource( 3 )
text = "flappy bird"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audition" type="Button" parent="."]
margin_left = 64.0
margin_top = 204.0
margin_right = 341.0
margin_bottom = 388.0
custom_colors/font_color = Color( 0.882353, 0.360784, 0.360784, 1 )
custom_fonts/font = SubResource( 1 )
text = "audition"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 66.0
margin_right = 129.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 4 )
text = "#####"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 450.0
margin_top = 427.0
margin_right = 567.0
margin_bottom = 468.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 5 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]
margin_left = 76.0
margin_top = 29.0
margin_right = 219.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 6 )
text = "###"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Dodge" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="flappy_bird" to="." method="_on_flappy_bird_pressed"]
[connection signal="pressed" from="audition" to="." method="_on_audition_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
